--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "open": "open http://localhost:3000",
     "start": "./node_modules/babel-cli/bin/babel-node.js --presets es2015,stage-0 server.js",
     "lint": "eslint src"
   },
