--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "radium": "^0.18.1",
+    "radium-component": "^0.4.0",
     "raf": "^3.3.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
